# llm_study

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
helm/: Chart.yaml
src/llm/: chatgpt_streaming_response.py  langchain.ipynb
src/llm/speech_recognition/: record_audio.py  voice_to_text.py
src/llm_study/google_drive/: google_drive.ipynb
